# yamper

./: .gitignore  Build.md  CMakeLists.txt  Doxyfile  ReadMe.md  install_deps.bat  install_deps.sh
include/: AddArtist.hpp  Alert.hpp  App.hpp  AppState.hpp  Artist.hpp  EditPlaylist.hpp  EditSong.hpp  GUI.hpp  IDObject.hpp  ISerializable.hpp  Icon.hpp  MainView.hpp  Manageable.hpp  Manager.hpp  Navigator.hpp  Player.hpp  Playlist.hpp  SelectArtist.hpp  SettingsWindow.hpp  Signal.hpp  Song.hpp  SongPlayer.hpp  Utils.hpp  Widgets.hpp  Window.hpp
include/MainViews/: AllSongs.hpp  ArtistView.hpp  PlaylistView.hpp  State.hpp
src/: AddArtist.cpp  Alert.cpp  App.cpp  Artist.cpp  EditPlaylist.cpp  EditSong.cpp  GUI.cpp  Icon.cpp  MainView.cpp  Navigator.cpp  Player.cpp  Playlist.cpp  SelectArtist.cpp  SettingsWindow.cpp  Song.cpp  SongPlayer.cpp  Widgets.cpp  main.cpp
src/MainViews/: AllSongs.cpp  ArtistView.cpp  PlaylistView.cpp  State.cpp
